--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:id="@+id/main_layout"
         tools:context=".MainActivity">
 
     <TextView
@@ -43,12 +44,11 @@
             app:layout_constraintTop_toTopOf="parent"/>
     <ProgressBar
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:visibility="invisible"
             style="?android:attr/progressBarStyleHorizontal"
-            android:progressDrawable="@drawable/progressbar_states"
             android:id="@+id/left_orientation"
-            app:layout_constraintStart_toStartOf="parent"
+            android:rotation="270"
             android:layout_marginBottom="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="0dp"
@@ -59,8 +59,10 @@
             android:layout_height="wrap_content"
             android:visibility="invisible"
             android:id="@+id/bottom_orientation"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
